uptade arquivo script.js

--- a/espaco.html
+++ b/espaco.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta name="description" content="Saloon Hair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
-    <meta name="keywords" content="salão de beleza em Barreiras Bahia, beleza, autoestima, barreiras, barreiras bahia, bahia, salão, cabeleireira, manicure, pedicure, manicure e pedicure barreiras">
+    <meta name="description" content=" Saloon Hair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
+    <meta name="keywords" content="salão de beleza em Barreiras Bahia, beleza, autoestima, barreiras, barreiras bahia, bahia, salão, cabeleireira, manicure, pedicure, manicure e pedicure barreiras, corte de cabelo feminino, cabelo feminino">
     <meta name="author" content="John Silva">
     <meta name="reply-to" content="conesplay64@gmail.com">
     <meta property="og:type" content="website"/>
 	<meta property="og:title" content="Saloon Hair - Conheça nosso espaço">
-    <meta property="og:description" content="Saloon Hair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
+    <meta property="og:description" content=" Saloon Hair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
     <meta property="og:image" content="https://cdn.folhape.com.br/upload/dn_arquivo/2016/10/salao.jpg">
 
     <title>Saloon Hair</title>
@@ -32,7 +32,7 @@
     <header id="header">
         <div class="container">
             <div class="header-logo">
-                <a href="#"><img src="./public/images/logo.svg" alt="Saloon Hair."></a>
+                <a href="#"><img src="./public/images/logo.svg" alt="Saloon Hair." ></a>
             </div> <!--HEADER-LOGO-->
             <div class="icon">
                 <i class="icon-menu"></i>
@@ -67,7 +67,7 @@
                 <h2>Nosso cantinho</h2>
                 <div class="container-content">
                     <div class="img-banner-espace">
-                        <img class="scroll" src="./public/images/banner-content-space.jpg" title="Foto de Max Vakhtbovych no Pexels" alt="">
+                        <img class="scroll" src="./public/images/banner-content-space.jpg" alt="Imagem do local físico da SaloonHair.">
                     </div>
                     <div class="content">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis odit sunt quod pariatur, quidem molestias non? Quis nulla commodi aperiam fugiat quisquam accusantium pariatur nam, iure, nobis, perferendis impedit laboriosam.</p>
@@ -138,14 +138,3 @@
     <script defer src="./public/js/script.js"></script>
 </body>
 </html>
-
-<body>
-    <div class="container">
-        <header>Eu sou um Cabeçalho</header>
-        <div> 
-            <div id="div_direita" >Div direita</div>
-            <div id="div_esquerda">Div esquerda </div>
-        </div>
-        <footer>Eu sou um Rodapé</footer>
-    </div>
-</body>
