--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="SaloonHair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
+    <meta name="description" content=" SaloonHair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
     <meta name="keywords" content="salão de beleza em Barreiras Bahia, beleza, autoestima, barreiras, barreiras bahia, bahia, salão, cabeleireira, manicure, pedicure, manicure e pedicure barreiras">
     <meta name="author" content="John Silva">
     <meta name="reply-to" content="conesplay64@gmail.com">
     <meta property="og:type" content="website"/>
 	<meta property="og:title" content="Saloon Hair - Venha ser fabulosa">
-    <meta property="og:description" content="aloonHair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
+    <meta property="og:description" content="SaloonHair, empresa especializada em dar autoestima para nossos clientes. Venha conhecer!">
     <meta property="og:image" content="https://cdn.folhape.com.br/upload/dn_arquivo/2016/10/salao.jpg">
 
     <title>Saloon Hair</title>
@@ -60,14 +60,14 @@
                 </div>
             </div> <!--HERO-CONTENT-->
             <div class="hero-image">
-                <img class="scroll" src="./public/images/img-intro.png" alt="">
+                <img class="scroll" src="./public/images/img-intro.png" alt="Foto de uma mulher de pele negra com cabelos cacheados">
             </div> <!--HERO-IMAGE-->
         </section> <!--HERO-->
 
         <section id="services">
             <div class="services-item">
                 <div class="image">
-                    <img class="scroll"  src="./public/images/corte.jpg" alt="Imagem de uma cabeleireira cortando o cabelo de uma mulher.">
+                    <img class="scroll" src="./public/images/corte.jpg" alt="Imagem de uma cabeleireira cortando o cabelo de uma mulher." >
                 </div> <!--IMAGES-->
                 <div class="content">
                     <h2>Corte seu cabelo com a gente</h2>
@@ -82,7 +82,7 @@
                     <a href="https://api.whatsapp.com/send?phone=+557798631901&text=Oi! Gostaria de ver o preços do serviço de vocês." target="_blank" class="button">Negociar preços</a>
                 </div> <!--CONTENT-->
                 <div class="image">
-                    <img class="scroll"  src="./public/images/escova.jpg" alt="Imagem de uma cabeleireira cuidando do cabelo de uma mulher.">
+                    <img class="scroll"  src="./public/images/escova.jpg" alt="Imagem de uma cabeleireira cuidando do cabelo de uma mulher." >
                 </div> <!--IMAGES-->
             </div>
             <div class="services-item">
@@ -109,7 +109,7 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nemo adipisci, suscipit pariatur dolores obcaecati quidem cumque exercitationem. Quos architecto velit mollitia iste porro consequuntur, nulla aperiam nam rem ea.</p>
                             <div class="container-user">
                                 <div class="img">
-                                    <img src="./public/images/user1.jpg" alt="">
+                                    <img src="./public/images/user1.jpg" alt="Foto de Júlia Costa" >
                                 </div>
                                 <div class="content">
                                     <h3>Júlia Costa</h3>
@@ -121,7 +121,7 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nemo adipisci, suscipit pariatur dolores obcaecati quidem cumque exercitationem. Quos architecto velit mollitia iste porro consequuntur, nulla aperiam nam rem ea.</p>
                             <div class="container-user">
                                 <div class="img">
-                                    <img src="./public/images/user2.jpg" alt="">
+                                    <img src="./public/images/user2.jpg" alt="Foto de Marta Nascimento">
                                 </div>
                                 <div class="content">
                                     <h3>Marta Nascimento</h3>
@@ -133,7 +133,7 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nemo adipisci, suscipit pariatur dolores obcaecati quidem cumque exercitationem. Quos architecto velit mollitia iste porro consequuntur, nulla aperiam nam rem ea.</p>
                             <div class="container-user">
                                 <div class="img">
-                                    <img src="./public/images/user3.jpg" alt="">
+                                    <img src="./public/images/user3.jpg" alt="Foto de Samara Sampaio" >
                                 </div>
                                 <div class="content">
                                     <h3>Samara Sampaio</h3>
@@ -145,7 +145,7 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nemo adipisci, suscipit pariatur dolores obcaecati quidem cumque exercitationem. Quos architecto velit mollitia iste porro consequuntur, nulla aperiam nam rem ea.</p>
                             <div class="container-user">
                                 <div class="img">
-                                    <img src="./public/images/user4.jpg" alt="">
+                                    <img src="./public/images/user4.jpg" alt="Foto de Lurdes Camargo" >
                                 </div>
                                 <div class="content">
                                     <h3>Lurdes Camargo</h3>
@@ -193,7 +193,7 @@
     <footer id="footer">
         <div class="container">
             <div class="branding">
-                <a href="#"><img class="scroll"  src="./public/images/logo-footer.svg" alt="Saloon Hair"></a>
+                <a href="#"><img class="scroll" src="./public/images/logo-footer.svg" alt="Saloon Hair"></a>
                 <p>&copy; Saloon Hair</p>
             </div>
             <div class="media">
