uptade falhas de estilo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 <body>
     
+
     <header id="header">
         <div class="container">
             <div class="header-logo">
@@ -211,6 +212,11 @@
             </div>
         </div> <!--CONTAINER-->
     </footer> <!--FOOTER-->
+
+    
+    <div class="scroll-top">
+        <a href="#"><i class="icon-arrow-up"></i></a>
+    </div>
 
     <!--GLIDER JS-->
     <script defer src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
